jaydamon/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: jaydamon
spec:
  tls:
  - hosts:
    - jaydamon.com
    secretName: jaydamon-issuer-key
  - hosts:
    - www.jaydamon.com
    secretName: www-jaydamon-issuer-key
  rules:
  - host: jaydamon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaydamon-service
            port:
              number: 80
  - host: www.jaydamon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaydamon-service
            port: 
              number: 80
